<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/rl2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/crearreceta"
            android:id="@+id/textView9"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/etTitulo"
            android:layout_marginTop="22dp"/>

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etTitulo"
            android:hint="@string/HintTitulo"
            android:layout_marginTop="21dp"
            android:layout_marginStart="23dp"
            android:layout_below="@+id/textView9"
            android:layout_alignParentStart="true"
            />

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:hint="@string/HintSeccion"
            android:layout_below="@+id/etTitulo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            android:hint="@string/dificultad"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editText"
            android:layout_alignStart="@+id/editText"/>

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="@string/tiempo"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/etTitulo"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint="@string/comensales"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editText3"
            android:layout_alignStart="@+id/editText2"/>

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText5"
            android:hint="@string/ingredientes"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editText4"
            android:layout_alignStart="@+id/editText4"/>

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText6"
            android:hint="@string/elaboracion"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editText5"
            android:layout_alignStart="@+id/editText3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guardar"
            android:id="@+id/btCrear"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/editText6"
            android:layout_marginTop="25dp"/>

    </RelativeLayout>
</LinearLayout>