<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:id="@+id/rl1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Titulo"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:layout_marginStart="40dp" android:layout_marginTop="37dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tiempo"
            android:id="@+id/tvTiempo"
            android:layout_marginTop="48dp" android:layout_below="@+id/textView5"
            android:layout_alignStart="@+id/textView5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:id="@+id/textView7" android:layout_alignBottom="@+id/tvTiempo"
            android:layout_toEndOf="@+id/tvTiempo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comensales"
            android:id="@+id/tvComensales"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/tvTiempo" android:layout_alignStart="@+id/tvTiempo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDificultad" android:layout_above="@+id/tvComensales"
            android:layout_alignParentEnd="true" android:layout_marginEnd="61dp" android:text="Dificultad"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Autor"
            android:id="@+id/tvAutor" android:layout_alignBottom="@+id/tvComensales"
            android:layout_alignStart="@+id/tvDificultad"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredientes"
            android:id="@+id/textView6"
            android:layout_marginTop="43dp" android:layout_below="@+id/tvComensales"
            android:layout_alignStart="@+id/tvComensales"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="Texto de ingredientes"
            android:id="@+id/tvIngredientes"
            android:layout_centerVertical="true" android:layout_alignStart="@+id/textView6"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elaboracion"
            android:id="@+id/textView8"
            android:layout_below="@+id/tvIngredientes" android:layout_alignStart="@+id/tvIngredientes"/>
        <TextView android:layout_width="wrap_content" android:layout_height="60dp" android:text="Texto de ingredientes"
                  android:id="@+id/tvElaboracion"
                  android:layout_below="@+id/textView8" android:layout_alignStart="@+id/textView8"
                  android:layout_alignEnd="@+id/tvDificultad"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/ic_launcher"
            android:layout_below="@+id/tvElaboracion" android:layout_centerHorizontal="true"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:numStars="1"
            android:layout_above="@+id/tvTiempo"
            android:layout_toEndOf="@+id/tvAutor"/>
    </RelativeLayout>
</LinearLayout>